# collaborationtool

./: .gitignore  .impeccable.md  CLAUDE.md  LICENSE  README.md  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.brainstorm/: CLIENT-FIRST-PIVOT.md  COUNCIL.md  DESKTOP-APP-SCOPE.md  E2EE-APP-DECISION.md  role-ai.md  role-architecture.md  role-design.md  role-product.md  role-user.md
.codex-review/: COUNCIL-2026-05-11.md  REVIEW-2026-05-11.md
.github/workflows/: desktop-release.yml  dogfood-bwrap.yml  dogfood-maintenance.yml  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: mod.rs  ollama.rs  system.rs  vault.rs  vault_host.rs
docs/: SELF_HOST.md  USER_GUIDE.md  dogfood-runbook.md
docs/superpowers/spikes/spike-3/win-appcontainer/: Cargo.toml  README.md
docs/superpowers/spikes/spike-3/win-appcontainer/src/: main.rs
mcp-servers/: registry.json
plan0/: ADR-INDEX.md  Design.md  claude-design-brief.md  dogfood-report-2026-05.md  improvement-plan-2026-05.md  improvement-plan-2026-07.md  improvement-plan-2026-08.md  landscape-9x4-matrix.md  next-session-tasks.md  paper-platform-landscape.md  paper-platform-system-prompt.md  phase-0-execution-plan.md  phase-1-execution-plan.md  phase-2-plan-stub.md  phase-3-plan-stub.md  phase-4-plan-stub.md  phase-5-trigger.md  phase-5-wave-a-scope.md  phase-6-plan-stub.md  prototypes-report.md
plugins/: registry.json
scripts/: check-ydoc-gate.sh  doctor.mjs
skills/: _registry.json
(+461 files in other folders)
