[package]
name = "win-appcontainer-poc"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Security",
  "Win32_Security_AppContainer",
  "Win32_System_Threading",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
